--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,15 +67,13 @@ jobs:
 
   create_release:
     name: Prepare Release
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
       release_id: ${{ steps.create_release.outputs.id }}
     steps:
 
-      - name: Get revision
-        shell: bash
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -90,7 +88,7 @@ jobs:
   publish_release:
     name: Publish Release
     needs: [create_release, build]
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
       - name: Get revision
