--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,10 +77,10 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.WF }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.build.outputs.rev }}
-          release_name: Firmware version ${{ steps.build.outputs.rev }}
+          tag_name: v$(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)
+          release_name: Firmware version $(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)
           draft: true
           prerelease: true
 
@@ -100,7 +100,7 @@ jobs:
       - uses: actions/github-script@v3
                  
         with:
-          github-token: ${{secrets.WF}} # ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.GITHUB_TOKEN}} # ${{secrets.WF}}
           script: |
             fs=require("fs");
             github.repos.updateRelease(
