--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,14 +73,19 @@ jobs:
       release_id: ${{ steps.create_release.outputs.id }}
     steps:
 
+      - name: Get Version
+        shell: bash
+        run: |
+             a="$(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)"
+             echo "fwv=$(cygpath -w -a ../*.7z)" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v$(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)
-          release_name: Firmware version $(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)
+          tag_name: v${{ env.fwv }}
+          release_name: Firmware version ${{ env.fwv }}
           draft: true
           prerelease: true
 
