--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,7 @@ jobs:
            echo "zip_path=$(realpath ../*.7z)" >> $GITHUB_OUTPUT
            echo "zip_name=$(basename ../*.7z)" >> $GITHUB_OUTPUT
            echo "rev=$ver" >> $GITHUB_OUTPUT
-           a="$(git log --pretty="%h - %ar: %s" -10)"
-           echo "glog=\"$a\"" >> $GITHUB_OUTPUT
+           git log --pretty="%h - %ar: %s" -10 >../revbody.txt
 
     - name: Release
       id: upload
@@ -99,9 +98,6 @@ jobs:
       - name: Get revision
         shell: bash
         run: |
-          echo -e '### Changelog:\n\n```text' >revbody.txt
-          echo "${{steps.build.outputs.glog }}" >>revbody.txt
-          echo -e '```' >>revbody.txt
           for a in $(curl -qs https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/main.yml/runs|grep -B 1 "Build And Release"|grep id|tr -d " ,"|cut -d ":" -f 2);do curl -qs -X DELETE -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.WF }} " "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$a";done
 
       - uses: actions/github-script@v3
