--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
         run: |
              a="$(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)"
              echo "fwv=$a" >> $GITHUB_ENV
-             b="$(curl -s https://api.github.com/repos/GideonZ/1541ultimate/commits|grep sha|head -1|cut -d'"' -f 4)"
+             b="$(curl -s 'https://github.com/GideonZ/1541ultimate/commits/'|grep commit-details|head -1|cut -d'"' -f 6|cut -d'-' -f 3)"
              b="${b::7}"
              echo "ft=$b" >> $GITHUB_ENV
 
