--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,9 +76,12 @@ jobs:
         run: |
              a=$(curl -s "https://raw.githubusercontent.com/GideonZ/1541ultimate/master/software/application/versions.h"|grep APPL_VERSION|cut -d'"' -f2)
              echo "fwv=$a" # >> $GITHUB_ENV
-             b=$(curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4)
-             b="${b::7}"
-             echo "ft=$b" # >> $GITHUB_ENV
+             #b=$(curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4)
+             #b="${b::7}"
+             curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4
+             a=`curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4`
+             a="${a:0:7}"
+             echo "ft=$a" # >> $GITHUB_ENV
              exit 127
 
       - name: Create Release
