--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,8 +78,8 @@ jobs:
              echo "fwv=$a" # >> $GITHUB_ENV
              #b=$(curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4)
              #b="${b::7}"
-             curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4
-             a=`curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4`
+             curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits" | grep sha | head -1|cut -d'"' -f4 >sha.txt || true
+             a=$(cat sha.txt)
              a="${a:0:7}"
              echo "ft=$a" # >> $GITHUB_ENV
              exit 127
