--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.ft }}
-          release_name: Firmware version ${{ env.fwv }}
+          release_name: Firmware version ${{ env.fwv }} (${{ env.ft }})
           draft: true
           prerelease: true
 
