--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,12 +16,12 @@ jobs:
         shell: bash
         run: |
           ( curl -qs https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/main.yml/runs|grep conclusion|grep -q null ) && exit 0 || (
-          for a in $(curl -qs https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/check.yml/runs|grep -B 1 "Check For Updates"|grep id|tr -d " ,"|cut -d ":" -f 2);do curl -qs -X DELETE -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }} " "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$a";done
+          for a in $(curl -qs https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/check.yml/runs|grep -B 1 "Check For Updates"|grep id|tr -d " ,"|cut -d ":" -f 2);do curl -qs -X DELETE -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.WF }} " "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$a";done
           curl -s "https://api.github.com/repos/GideonZ/1541ultimate/commits"|grep 2>/dev/null sha|head -1|cut -d'"' -f4|cut -c 1-7 >grev.txt || true
           curl -s "https://api.github.com/repos/Zibri/1541-Ultimate-Firmware/releases"|grep 2>/dev/null tag_name|head -1|cut -d'"' -f4 >zrev.txt || true)
           cmp -s grev.txt zrev.txt && exit 0 || (
           ( curl -v -X POST -d '{"ref":"main"}' -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }} " \
+          -H "Authorization: token ${{ secrets.WF }} " \
           "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/main.yml/dispatches";
           ) || exit 0 && (
           echo "New revision $revision on GIT!"
