--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Check For Updates
 
 on:
   schedule:
-  - cron: '0 * * * *'    # Every Hour
+  - cron: '0 */6 * * *'    # Every Hour
 
   workflow_dispatch:
   
