--- a/.github/workflows/zibri.yml
+++ b/.github/workflows/zibri.yml
@@ -40,6 +40,8 @@ jobs:
            export QUARTUS_ROOTDIR="/opt/fpga/quartus"
            git clone --recurse-submodules -j8 https://github.com/Zibri/1541ultimate
            cd 1541ultimate
+           sed -i "s/0x1E00/0x1E0C/g" software/drive/disk_image.h
+           sed -i "s/0x1E00, 0x1BE0, 0x1A00, 0x1860, 0x1E00, 0x1BE0, 0x1A00, 0x1860/0X1E0C, 0x1BE6, 0x1A0A, 0x186A, 0X1E0C, 0x1BE6, 0x1A0A, 0x186A/g" software/drive/disk_image.cc
            make u2plus
            export -n LD_LIBRARY_PATH
            cp target/u2plus/nios/ultimate/result/ultimate.bin .
