--- a/.github/workflows/zibri2.yml
+++ b/.github/workflows/zibri2.yml
@@ -29,6 +29,8 @@ jobs:
     - name: Build
       id: build
       shell: bash
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
            chmod a+x buildz2.sh
            ./buildz2.sh
