--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
            chmod a+x build.sh
-           ./buildz2.sh ${{ github.event.inputs.revision }}
+           ./build.sh ${{ github.event.inputs.revision }}
     
 
             
